--- a/appTemplate/coimotion.plist
+++ b/appTemplate/coimotion.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>searchURI</key>
+	<string>cms/geoLoc/search</string>
 	<key>appCode</key>
-	<string>demoApp</string>
+	<string>wcoim</string>
 	<key>loginURI</key>
 	<string>core/user/login</string>
 	<key>baseURL</key>
