--- a/appTemplate/appTemplate-Info.plist
+++ b/appTemplate/appTemplate-Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>APP_CODE</key>
+	<key>coim_app_code</key>
 	<string>demoApp</string>
-	<key>APP_KEY</key>
+	<key>coim_app_key</key>
 	<string>518d517f-2c91-0cf9-f3f1-a0f3133e85b0</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
