--- a/appTemplate/appTemplate-Info.plist
+++ b/appTemplate/appTemplate-Info.plist
@@ -58,5 +58,9 @@
 	<string>demoApp</string>
 	<key>coim_app_key</key>
 	<string>518d517f-2c91-0cf9-f3f1-a0f3133e85b0</string>
+	<key>coim_timeout</key>
+	<string>aaa</string>
+	<key>coim_debug</key>
+	<true/>
 </dict>
 </plist>
